--- a/Maude.tex
+++ b/Maude.tex
@@ -38,7 +38,6 @@ The data types of a Maude specification are defined using sorts with subtypes ex
 \begin{mydef}[Equational Theory]
 An equational theory is a 2 tuple $(\Sigma, E)$ where $\Sigma$ is a set of sorts, subsorts and operator declarations  and $E$ is the set of equations modulo $\Sigma$
 \end{mydef}
-
 Equational theories \cite{JM98} form the signature of a Maude specification and provide one with a means to represent data types using various symbols. If we consider the natural numbers defined symbolically  as an equational theory, the set $\Sigma$ would consist of the sort $Nat$ and the operations $0$, $s$, and $+$, the set $E$ would consist of associativity and commutativity for $+$.
 
 Formally a Maude specification is a \emph{rewrite theory} \cite{JM98} of the form $\mathfrak{R}=(\Sigma,E,L,R)$, where  $(\Sigma, E)$ is an equational theory, $L$ is a set of labels and $R$ is a set of labelled rewrite rules of the form:
@@ -322,11 +321,11 @@ The following are some states reachable in time 2.
 \end{lstlisting}
 
 \section{Modelling the European Rail Traffic Management System}
-In the following we shall give an overview of the specifications used to model the ERTMS system. We have used the Real Time Maude system in an object oriented fashion following the hybrid automata described in Chapter~\ref{chap:hybrid} to define one class for each of the three hybrid automata. Time has been modelled by the use of a function $\mathrm{delta}$ that distributes the transition of time over objects in the system following the approach found in \cite{PO07b}. Rewriting rules are then applied to $\mathrm{delta}$ operations containing singleton objects to give each individual object its behaviour. We attempt to remove as much non-determinism from the model as possible by forcing the ERTMS system to read all messages by the end of each time step and by preventing trains from making more than one movement authority request to the radio block processor in a given time step.
+In the following we shall give an overview of the specifications used to model the ERTMS system. We have used the Real Time Maude system in an object oriented fashion following the hybrid automata described in Chapter~\ref{chap:hybrid} to define one class for each of the three hybrid automata. Time has been modelled by the use of a function $\mathrm{delta}$ that distributes the transition of time over objects in the system following the approach found in \cite{PO07}. Rewriting rules are then applied to $\mathrm{delta}$ operations containing singleton objects to give each individual object its behaviour. We attempt to remove as much non-determinism from the model as possible by forcing the ERTMS system to read all messages by the end of each time step and by preventing trains from making more than one movement authority request to the radio block processor in a given time step.
 
 
 \subsubsection*{Modelling the Transition of Time} \label{sec:maudetimemodelling}
-In our previous Real Time Maude specifications we have had rewrite rules that work on a specific object or state and increment time for the whole system. This presents a problem as we could have two objects that can both increment the time of the global system independently.  Since we are modelling a real life system all of the subsystems much be subjected to time in an equal manner. We need a way of incrementing the time of the whole global system and then distributing this increment of time amongst the objects of the system. To solve this problem we define an operator $\texttt{delta}$ \cite{PO07b} which describes how a distributed system evolves with time. We define another operation\footnote{An earlier version of my thesis used an adhoc non-delta operation to achieve this effect} $\texttt{mte}$ which computes the maximum time elapse possible in the systems current configuration.
+In our previous Real Time Maude specifications we have had rewrite rules that work on a specific object or state and increment time for the whole system. This presents a problem as we could have two objects that can both increment the time of the global system independently.  Since we are modelling a real life system all of the subsystems much be subjected to time in an equal manner. We need a way of incrementing the time of the whole global system and then distributing this increment of time amongst the objects of the system. To solve this problem we define an operator $\texttt{delta}$ \cite{PO07} which describes how a distributed system evolves with time. We define another operation\footnote{An earlier version of my thesis used an adhoc non-delta operation to achieve this effect} $\texttt{mte}$ which computes the maximum time elapse possible in the systems current configuration.
 
 \begin{lstlisting}[caption = The delta and mte operations, label = code:delta]
 op mte : Configuration -> TimeInf [frozen (1)] .
