--- a/BackgroundModelChecking.tex
+++ b/BackgroundModelChecking.tex
@@ -212,39 +212,78 @@ The translation of the LTL property into a \Buchi automaton takes three steps fo
 
 \begin{enumerate}
 \item Construct a very weak alternating (VWA) automaton
-\item Convert this VWA automata into a generlised \Buchi automaton
-\item Convert the generlised \Buchi automata into a standard \Buchi automaton
+\item Convert this VWA automata into a generalised \Buchi automaton
+\item Convert the generalised \Buchi automata into a standard \Buchi automaton
 \end{enumerate}
 
 At every step the automaton is simplified by removing unreachable states and subsumed transitions and combining equivalent states. In order to perform model checking we need to be able to find accepting runs of the automaton. Since these accepting runs are infinite they must contain a loop through the automaton. Therefore the model checking algorithm partitions the \Buchi automaton into its strongly connected components. A set of states in a \Buchi automaton is a \emph{strongly connected component} (SCC) if and only if every state in that set is reachable from every other state in that set. 
 
-The model checking algorithm performs a search, using the double depth first search algorithm, for strongly connected components in a \Buchi automaton $A = (L,S,T, S_0, F)$ and tests to see whether the acceptance condition is empty. Let $\rho$ be an accepting run of the automaton i.e. it contains infinitely many accepting states from $A$.  There must exist some $\rho'$, which is a suffix of $\rho$, such that every state within $\rho'$ occurs infinitely often in $\rho'$. These states of $\rho'$ form a strongly connected component as every state must be reachable from every other state. The converse also holds meaning that a search algorithm for strongly connected components also checks for accepting runs of the automata. Accepting runs in the automata correspond to counter-examples and accepting states to violating states. The following is the double depth first search algorithm \cite{CC91,GH96}:
+The model checking algorithm performs a search, using the double depth first search algorithm, for strongly connected components in a \Buchi automaton $A = (L,S,T, S_0, F)$ and tests to see whether the acceptance condition is empty. A B{\"u}chi automaton is non-empty if and only if there exists a strongly connect component reachable from the initial state containing at least one accepting state. Let $\rho$ be an accepting run of the automaton i.e. it contains infinitely many accepting states from $A$.  There must exist some $\rho'$, which is a suffix of $\rho$, such that every state within $\rho'$ occurs infinitely often in $\rho'$. These states of $\rho'$ form a strongly connected component as every state must be reachable from every other state. The converse also holds meaning that a search algorithm for strongly connected components also checks for accepting runs of the automata. Accepting runs in the automata correspond to counter-examples and accepting states to violating states. The following is the double depth first search algorithm \cite{CC91,GH96}:
 
 \begin{lstlisting}[caption = The Double Depth First Search Algorithm, mathescape]
 Emptiness(A)
+{
 $\forall s_0 \in S_0$ do
-	dfs1($s_0$,A,HT)
+	dfs1($s_0$)
 terminate(False);
+}
 
-dfs1(s,A)
-Stack Stack1 := empty
-Hashtable HT1 := empty
-push(s,Stack1)
-insert(s,HT1)
-$\forall s' \in S. T(s,s')$ do
-	if $s' \notin \mathrm{HT1}$ then dfs1(s')
-if accept(s,A) then dfs2(s)
-pop(Stack1)
+dfs1($s_0$)
+{
+Stack Stack1 := $\{ s_0 \}$
+Hashtable HT1 := $\emptyset$
+Queue Queue1 := $\emptyset$
+while ($\mathrm{Stack1} \, \neq \emptyset$)
+{
+    s := top(Stack1) 
+    insert(s,HT1)
+    if $\forall s' \in S. T(s,s') \to s' \in \mathrm{HT1}$
+    {
+        pop(Stack1)
+        if $s \in F$
+        {
+            insert(s,Queue1)
+        }
+    }
+    else
+    {
+        if $\exists s' \in S. T(s,s')  \wedge  s' \notin HT1 $ 
+        {
+            insert(s', HT1)
+            push(s',Stack1)
+        }
+    }
+}
 
-dfs2(s,A)
-Stack Stack2 := empty
-Hashtable HT2 := empty
-push(s,Stack2)
-insert(s,HT2)
-$\forall s' \in S.T(s,s')$ do
-	if $s' \in \mathrm{Stack1}$ return(True)
-	else if $s' \notin \mathrm{HT2}$ then dfs2(s')
-pop(Stack2)
+dfs2(Queue1)
+Stack Stack2 := $\emptyset$
+Hashtable HT2 := $\emptyset$
+while ($\mathrm{Queue1} \neq \emptyset $)
+{
+    s := head(Queue1)
+    remove(s, Queue1)
+    push(s,Stack2)
+    while ($Stack2 \neq \emptyset$)
+    {
+        $s'$ := top(Stack2)
+        if T($s'$,s)
+        {
+            return true
+        }
+        if $\forall s'' \in S. T(s',s'') \to s'' \in HT2$
+        {
+            pop(Stack2)
+        }
+        else
+        {
+            $\exists s'' \in S. T(s', s'') \wedge s'' \notin HT2$
+            insert($s''$,HT2)
+            push($s''$,Stack2)    
+        }
+    } 
+}
+
+
 \end{lstlisting}
 
 The algorithm uses a combination of hash tables and stacks for efficiency reasons. It is more computationally expensive to check that an element does not occur in a stack than in a hash table. The first procedure \texttt{dfs1} searches for a state that is part of an accepting run and  is reachable from an initial state. The second depth first search procedure attempts to form a loop by looking for successor states that are already on the state stack. 
