--- a/BackgroundModelChecking.tex
+++ b/BackgroundModelChecking.tex
@@ -223,67 +223,70 @@ The model checking algorithm performs a search, using the double depth first sea
 \begin{lstlisting}[caption = The Double Depth First Search Algorithm, mathescape]
 Emptiness(A)
 {
-$\forall s_0 \in S_0$ do
+    $\forall s_0 \in S_0$ do
 	dfs1($s_0$)
-terminate(False);
+    return false
 }
 
 dfs1($s_0$)
 {
-Stack Stack1 := $\{ s_0 \}$
-Hashtable HT1 := $\emptyset$
-Queue Queue1 := $\emptyset$
-while ($\mathrm{Stack1} \, \neq \emptyset$)
-{
-    s := top(Stack1) 
-    insert(s,HT1)
-    if $\forall s' \in S. T(s,s') \to s' \in \mathrm{HT1}$
+    Stack Stack1 := $\{ s_0 \}$
+    Hashtable HT1 := $\emptyset$
+    Queue Queue1 := $\emptyset$
+    while ($\mathrm{Stack1} \, \neq \emptyset$)
     {
-        pop(Stack1)
-        if $s \in F$
+        s := top(Stack1) 
+        insert(s,HT1)
+        if ($\forall s' \in S. T(s,s') \to s' \in \mathrm{HT1}$)
         {
-            insert(s,Queue1)
-        }
-    }
-    else
-    {
-        if $\exists s' \in S. T(s,s')  \wedge  s' \notin HT1 $ 
-        {
-            insert(s', HT1)
-            push(s',Stack1)
-        }
-    }
-}
-
-dfs2(Queue1)
-Stack Stack2 := $\emptyset$
-Hashtable HT2 := $\emptyset$
-while ($\mathrm{Queue1} \neq \emptyset $)
-{
-    s := head(Queue1)
-    remove(s, Queue1)
-    push(s,Stack2)
-    while ($Stack2 \neq \emptyset$)
-    {
-        $s'$ := top(Stack2)
-        if T($s'$,s)
-        {
-            return true
-        }
-        if $\forall s'' \in S. T(s',s'') \to s'' \in HT2$
-        {
-            pop(Stack2)
+            pop(Stack1)
+            if $s \in F$
+            {
+                insert(s,Queue1)
+            }
         }
         else
         {
-            $\exists s'' \in S. T(s', s'') \wedge s'' \notin HT2$
-            insert($s''$,HT2)
-            push($s''$,Stack2)    
+            if ($\exists s' \in S. T(s,s')  \wedge  s' \notin HT1$) 
+            {
+                insert(s', HT1)
+                push(s',Stack1)
+            }
         }
-    } 
+    }
+    dfs2(Queue1)
 }
 
-
+dfs2(Queue1)
+{
+    Stack Stack2 := $\emptyset$
+    Hashtable HT2 := $\emptyset$
+    while ($\mathrm{Queue1} \neq \emptyset $)
+    {
+        s := head(Queue1)
+        remove(s, Queue1)
+        push(s,Stack2)
+        while ($Stack2 \neq \emptyset$)
+        {
+            $s'$ := top(Stack2)
+            if (T($s'$,s))
+            {
+                return true
+            }
+        
+            if ($\forall s'' \in S. T(s',s'') \to s'' \in HT2$)
+            {
+                 pop(Stack2)
+            }
+            else
+            {
+                $\exists s'' \in S. T(s', s'') \wedge s'' \notin HT2$
+                insert($s''$,HT2)
+                push($s''$,Stack2)    
+            }
+        } 
+    }
+}
 \end{lstlisting}
 
 The algorithm uses a combination of hash tables and stacks for efficiency reasons. It is more computationally expensive to check that an element does not occur in a stack than in a hash table. The first procedure \texttt{dfs1} searches for a state that is part of an accepting run and  is reachable from an initial state. The second depth first search procedure attempts to form a loop by looking for successor states that are already on the state stack. 
